@@ -2,10 +2,10 @@ Package: scGate
 Type: Package
 Title: Marker-Based Cell Type Purification for Single-Cell Sequencing
         Data
-Version: 1.6.2
+Version: 1.7.0
 Authors@R: c(
   person('Massimo', 'Andreatta',
-    email = 'massimo.andreatta@unil.ch',
+    email = 'massimo.andreatta@unige.ch',
     role = c('aut','cre'),
     comment = c(ORCID = '0000-0002-8036-2647')), 
   person('Ariel','Berenstein',
@@ -13,10 +13,10 @@ Authors@R: c(
     role = c('aut'),
     comment = c(ORCID = '0000-0001-8540-5389')), 
   person('Josep','Garnica',
-    email = 'josep.garnicacaparros@unil.ch',
+    email = 'josep.garnicacaparros@unige.ch',
     role = c('aut')),  
   person('Santiago', 'Carmona',
-    email = 'santiago.carmona@unil.ch',
+    email = 'santiago.carmona@unige.ch',
     role = c('aut'),
     comment = c(ORCID = '0000-0002-2495-0671')) 
   )
@@ -32,13 +32,13 @@ BugReports: https://github.com/carmonalab/scGate/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 NeedsCompilation: no
-Packaged: 2024-04-23 08:21:05 UTC; mass
+Packaged: 2025-04-24 13:14:46 UTC; mass
 Author: Massimo Andreatta [aut, cre] (<https://orcid.org/0000-0002-8036-2647>),
   Ariel Berenstein [aut] (<https://orcid.org/0000-0001-8540-5389>),
   Josep Garnica [aut],
   Santiago Carmona [aut] (<https://orcid.org/0000-0002-2495-0671>)
-Maintainer: Massimo Andreatta <massimo.andreatta@unil.ch>
+Maintainer: Massimo Andreatta <massimo.andreatta@unige.ch>
 Repository: CRAN
-Date/Publication: 2024-04-23 08:50:02 UTC
+Date/Publication: 2025-04-24 14:10:02 UTC
