@@ -1,14 +1,14 @@
-57f5be08fdd627591c7bcdbfa0bf5785 *DESCRIPTION
+1997eae85bdea9d96ca21a1ac8ea51e1 *DESCRIPTION
 32d5ad4f6993ef24697aa95c847ac304 *NAMESPACE
 e1dad5d578f95e5560ea8012986d72fa *R/main.R
-5384d1d09d616d58ee5aefd1097793bd *R/utils.R
-d9fd8dd150d03f3ab65d79080629db61 *build/vignette.rds
+a0413461d9940d703b81bf2ff0735c13 *R/utils.R
+3adde79b0b1e1cc2564692d7280b8a67 *build/vignette.rds
 0e09fe39b7fb5d92f4d0549e2e5d96b5 *data/genes.blacklist.default.RData
 4f61eb61534e4aa17cdf6840e65a5a6b *data/query.seurat.rda
 850a6fc0af8248addfb5206f9bcee44d *inst/CITATION
-9c87bcbddd1ee4600dec4873a571a8af *inst/NEWS.Rd
-29c5a45a56864172dd0c6c737d397adf *inst/doc/make.index.Rmd
-5b6892f6d98827ce1d9e750bfa035e6a *inst/doc/make.index.html
+465822823321135b6a7fd37684d9f969 *inst/NEWS.Rd
+f761de88bd77e0966667dd2d9ed89f6f *inst/doc/make.index.Rmd
+54ca929bef3a4acf26f46bd4f076f03f *inst/doc/make.index.html
 414fc7cd30fd7362109583f38c0926ce *man/combine_scGate_multiclass.Rd
 1bdf308c0b65a6de0034c70da9f3de62 *man/gating_model.Rd
 ed8d2d55ffcd21715b3143a4c27fd37c *man/genes.blacklist.default.Rd
@@ -22,4 +22,4 @@ a6b6b54a985b87c0b221e1ac74ba2ba6 *man/load_scGate_model.Rd
 13676acf05efc7889b5720177c55c7e9 *man/query.seurat.Rd
 e61d4e0d3a8230a399dea7aa040cec2d *man/scGate.Rd
 23ac174a03524b77d0ed7be22f492709 *man/test_my_model.Rd
-29c5a45a56864172dd0c6c737d397adf *vignettes/make.index.Rmd
+f761de88bd77e0966667dd2d9ed89f6f *vignettes/make.index.Rmd
