@@ -256,7 +256,7 @@ CITE-seq</a></p></li>
 integrated</a></p></li>
 </ol>
 <p>More information available at the <a href="https://github.com/carmonalab/scGate">scGate repository</a> at on
-the related <a href="https://academic.oup.com/bioinformatics/article/38/9/2642/6544581">publication</a>.</p>
+the related <a href="https://doi.org/10.1093/bioinformatics/btac141">publication</a>.</p>
 
 
 
